[gd_scene load_steps=13 format=3 uid="uid://cq6xa4p6iybvd"]

[ext_resource type="Script" path="res://script/bat.gd" id="1_riatu"]
[ext_resource type="Texture2D" uid="uid://dxkotusypg6si" path="res://arts/characters/VampireBat.png" id="2_gsegq"]
[ext_resource type="PackedScene" uid="uid://bcij4y6ry8na4" path="res://healthbar/healthbar.tscn" id="3_iorcm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_33hop"]
atlas = ExtResource("2_gsegq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o0iq"]
atlas = ExtResource("2_gsegq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gbc6"]
atlas = ExtResource("2_gsegq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c311v"]
atlas = ExtResource("2_gsegq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bwv57"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33hop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o0iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gbc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c311v")
}],
"loop": true,
"name": &"bat",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_eyhpu"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ne41f"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_40npp"]
radius = 75.0267

[sub_resource type="CircleShape2D" id="CircleShape2D_busrp"]
radius = 11.0

[node name="bat" type="CharacterBody2D" groups=["bat"]]
script = ExtResource("1_riatu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bwv57")
animation = &"bat"
frame_progress = 0.795347

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_eyhpu")

[node name="hitbox" type="Area2D" parent="."]
visible = false
position = Vector2(-1, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_ne41f")

[node name="detection" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_40npp")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.251

[node name="Healthbar" parent="." instance=ExtResource("3_iorcm")]
offset_left = -7.0
offset_top = 10.0
offset_right = 8.0
offset_bottom = 12.0

[node name="hitarea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitarea"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_busrp")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
